@@ -1,5 +1,11 @@
 2008-03-05  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* NEWS, src/faillog.c: Only reset the entries of existing users
+	with faillog -r (not all numeric IDs starting from 0). Thanks to
+	Peter Vrabec.
+
+2008-03-05  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/pwunconv.c: Fix typo. One "can't open" message is a "can't
 	lock".
 
